[package]
name = "dictview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["headers"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
clap = { version = "4.1.1", features = ["derive"] }
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.23"
levenshtein = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = [ "full" ] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
